--- a/styles/prosilver/template/mods/postingform_body.html
+++ b/styles/prosilver/template/mods/postingform_body.html
@@ -6,7 +6,7 @@
 		<div class="inner">
 			<fieldset class="fields1">
 		<!-- Starting Form title -->
-			<h2>{L_POSTING_FORM}</h2>
+			<h2>{L_POSTING_FORM_TITLE}</h2>
 		<!-- Ending Form title -->
 
 		<!-- Starting forums list -->
@@ -20,7 +20,7 @@
 					<!-- IF not forums_list.S_IS_POST -->
 						<optgroup label="{forums_list.FORUM_NAME}">
 					<!-- ELSE -->
-						<option value="{forums_list.FORUM_ID}" {forums_list.SELECTED}>{forums_list.FORUM_NAME}
+						<option value="{forums_list.FORUM_ID}"{forums_list.FORUM_SELECTED}>{forums_list.FORUM_NAME}
 					<!-- ENDIF -->
 					<!-- IF not forums_list.S_IS_POST -->
 						</optgroup>
@@ -36,6 +36,38 @@
 			</dl>
 		<!-- Ending forums list -->
 
+		<!-- Starting post_type -->
+			<!-- IF SHOW_POST_TYPE -->
+				<dl>
+					<dt><label for="select_post_type">{L_POST_TYPE_TITLE}{L_COLON}</label></dt>
+					<dd>
+						<input id="select_post_type" type="radio" name="select_post_type" value="1"<!-- IF not S_TOPICS_LIST or POST_TYPE_OPTION eq 1 -->checked="checked"<!-- ENDIF --> onClick="this.form.submit()" tabindex="20" />{L_POST_TYPE_NEW}
+						<!-- IF S_TOPICS_LIST -->
+						<input id="select_post_type" type="radio" name="select_post_type" value="2"<!-- IF POST_TYPE_OPTION eq 2 -->checked="checked"<!-- ENDIF --> onClick="this.form.submit()" tabindex="30" />{L_POST_TYPE_REPLY}
+						<!-- ENDIF -->
+					</dd>
+				</dl>
+			<!-- ENDIF -->
+		<!-- Ending post_type -->
+		
+		<!-- Starting topics list -->
+			<!-- IF POST_TYPE_OPTION eq 2 -->
+				<dl>
+					<dt><label for="select_topic_id">{L_TOPIC_SELECT_TITLE}{L_COLON}</label></dt>
+					<dd>
+				<!-- IF S_TOPICS_LIST -->
+					<!-- BEGIN topics_list -->
+						<input id="select_topic_id" type="radio" name="select_topic_id" value="{topics_list.TOPIC_ID}"{topics_list.TOPIC_SELECTED} onClick="this.form.submit()" tabindex="40" />{topics_list.TOPIC_TITLE}
+					<!-- END topics_list -->
+				<!-- ELSE -->
+					{L_NO_TOPIC}
+				<!-- ENDIF -->
+					</dd>
+				</dl>
+			<!-- ENDIF -->
+		<!-- Ending topics list -->
+		
+		
 		
 			</fieldset>
 			
