--- a/styles/prosilver/template/mods/postingform_body.html
+++ b/styles/prosilver/template/mods/postingform_body.html
@@ -8,7 +8,12 @@
 		<!-- Starting Form title -->
 			<h2>{L_POSTING_FORM_TITLE}</h2>
 		<!-- Ending Form title -->
-
+<!-- IF SHOW_ERRORS_LIST -->
+<dl><dd class="error">
+<ul>{ERRORS_EXPLAIN}<br />
+{ERRORS_LIST}</ul>
+</dd></dl>
+<!-- ENDIF -->
 		<!-- Starting forums list -->
 			<dl>
 				<dt><label for="select_forum_id">{L_FORUM_SELECT_TITLE}{L_COLON}</label></dt>
@@ -158,7 +163,7 @@
 			
 		<!-- Starting Submission button -->
 			<fieldset class="submit-buttons">
-				<input type="submit" accesskey="s" tabindex="6" name="post" value="{L_SUBMIT}" disabled />&nbsp;
+				<input type="submit" accesskey="s" tabindex="6" name="post" value="{L_SUBMIT}" />&nbsp;
 			</fieldset>
 		<!-- Ending Submission button -->
 			
