Posting Date - User registration date - Mail activation
Messages posted with correct asked date.
Possibility to definy a registration date if we decide to add a new
user.
Welcome message modified.

Les messages sont désormais postés avec les bonnes dates.
Il est possible de définir une date d'enregistrement lorsque l'on a
décidé d'ajouter un nouveau membre.
Mail de bienvenue modifié.

--- a/styles/prosilver/template/mods/postingform_body.html
+++ b/styles/prosilver/template/mods/postingform_body.html
@@ -156,6 +156,16 @@
 					<dt><label for="select_user_mail">{L_USER_MAIL_FIELD}{L_COLON}</label></dt>
 					<dd><input id="select_user_mail" type="text" name="select_user_mail" value="{USER_MAIL_FIELD}" size="45" onchange="this.form.submit()" /></dd>
 				</dl>
+				
+				<dl>
+					<dt><label for="select_user_day">{L_USER_DAY}{L_COLON}</label><br />{L_USER_DAY_EXPLAIN}</dt>
+					<dd><input id="select_user_day" type="text" name="select_user_day" value="{USER_DAY_FIELD}" size="12" maxlength="10" onchange="this.form.submit()" tabindex="70" /></dd>
+				</dl>
+			
+				<dl>
+					<dt><label for="select_user_time">{L_USER_TIME}{L_COLON}</label><br />{L_USER_TIME_EXPLAIN}</dt>
+					<dd><input id="select_user_time" type="text" name="select_user_time" value="{USER_TIME_FIELD}" size="12" maxlength="10" onchange="this.form.submit()" tabindex="80" /></dd>
+				</dl>
 			<!-- ENDIF -->
 		<!-- Ending new users -->
 		
